--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Main Page */
+
 body {
     font-family: "Open Sans";
     text-align: center;
@@ -122,3 +124,5 @@ body {
     padding: 1em;
     background-color: lightgray;
 }
+
+
